--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.activiti.cloud.modeling.build</groupId>
     <artifactId>activiti-cloud-modeling-parent</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.1</version>
     <relativePath/>
   </parent>
   <groupId>org.activiti.cloud.dependencies</groupId>
@@ -90,7 +90,7 @@
   </repositories>
 
   <properties>
-    <activiti-cloud-modeling-build.version>7.0.0-SNAPSHOT</activiti-cloud-modeling-build.version>
+    <activiti-cloud-modeling-build.version>7.0.1</activiti-cloud-modeling-build.version>
     <activiti-cloud-org-service.version>7.0.17</activiti-cloud-org-service.version>
     <activiti-cloud-process-model-service.version>7.0.19</activiti-cloud-process-model-service.version>
   </properties>
