--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,10 @@
     <relativePath/>
   </parent>
   <groupId>org.activiti.cloud.dependencies</groupId>
-  <artifactId>activiti-cloud-modeling-dependencies</artifactId>
+  <artifactId>activiti-cloud-modeling-dependencies-parent</artifactId>
   <version>7.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Activiti Cloud Modeling :: BOM (Bill of Materials)</name>
+  <name>Activiti Cloud Modeling :: BOM (Bill of Materials) Parent</name>
   <description>${project.name}</description>
   <url>http://activiti.org</url>
   <inceptionYear>2018</inceptionYear>
@@ -95,38 +95,21 @@
     <activiti-cloud-process-model-service.version>7.0.25</activiti-cloud-process-model-service.version>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.activiti.cloud.modeling.build</groupId>
-        <artifactId>activiti-cloud-modeling-dependencies-parent</artifactId>
-        <version>${activiti-cloud-modeling-build.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti.cloud.modeling</groupId>
-        <artifactId>activiti-cloud-org-dependencies</artifactId>
-        <version>${activiti-cloud-org-service.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.activiti.cloud.process.model</groupId>
-        <artifactId>activiti-cloud-process-model-dependencies</artifactId>
-        <version>${activiti-cloud-process-model-service.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version></plugin>
+        <version>2.8.2</version>
+        <configuration>
+          <deployAtEnd>true</deployAtEnd>
+        </configuration>
+      </plugin>
     </plugins>
-    </build>
-  </project>
+  </build>
+  
+  <modules>
+    <module>dependencies-tests</module>
+    <module>dependencies</module>
+  </modules>
+</project>
