--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,7 +6,7 @@ pull_request_rules:
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
-      - label!=work-in-progress
+      - label!=do-not-merge
     actions:
       delete_head_branch: {}
       merge:
