--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,27 @@
     <activiti-cloud-process-model-service.version>7.0.26</activiti-cloud-process-model-service.version>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.activiti.cloud.modeling.build</groupId>
+      <artifactId>activiti-cloud-modeling-parent</artifactId>
+      <version>${activiti-cloud-modeling-build.version}</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti.cloud.modeling</groupId>
+      <artifactId>activiti-cloud-org-dependencies</artifactId>
+      <version>${activiti-cloud-org-service.version}</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti.cloud.process.model</groupId>
+      <artifactId>activiti-cloud-process-model-dependencies</artifactId>
+      <version>${activiti-cloud-process-model-service.version}</version>
+      <type>pom</type>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
