--- a/dependencies-tests/pom.xml
+++ b/dependencies-tests/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.activiti.cloud.dependencies</groupId>
     <artifactId>activiti-cloud-modeling-dependencies-parent</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.105</version>
   </parent>
   <artifactId>activiti-cloud-modeling-dependencies-tests</artifactId>
   <packaging>pom</packaging>
