add modeling dependencies version to full chart

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -8,3 +8,5 @@ github:
     - name: activiti-cloud-acceptance-scenarios
       branch: master
       useSinglePullRequest: true
+    - name: activiti-cloud-full-chart
+      useSinglePullRequest: true  
