--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>org.activiti.cloud.dependencies</groupId>
   <artifactId>activiti-cloud-modeling-dependencies-parent</artifactId>
-  <version>7.1.0-SNAPSHOT</version>
+  <version>7.1.217</version>
   <packaging>pom</packaging>
   <name>Activiti Cloud Modeling :: BOM (Bill of Materials) Parent</name>
   <description>${project.name}</description>
